# carry-forward

./: .gitignore  ROADMAP.md
carry_forward/: AI_GUIDE.md  Carry Forward AI Guide.md  README.md  ROADMAP.md  carry_forward.py  pyproject.toml  replay_harness.py  roadmap.yaml  roadmap_integration.py
carry_forward (Copy)/: AI_GUIDE.md  carry_forward.py
carry_forward/tests/: conftest.py  test_carry_forward.py  test_model_aware.py  test_replay_harness.py
